# 5932890-sands-python

./: Untitled.ipynb  pyproject.toml  readme.md  script.py  signals.py
.ipynb_checkpoints/: pyproject-checkpoint.toml  readme-checkpoint.md  script-checkpoint.py  signals-checkpoint.py
