
```toml
[project]
name = "signals-endterm project"
version = "0.1.0"
description = "Endterm project for Signals and Systems with Python"
authors = [
  { name = "Samuel_Archillia_Rodrigues", email = "sarchilliarodr@tudelft.nl" }
]
readme = "README.md"
license = { text = "MIT" }

[project.dependencies]
numpy = ">=1.21"
matplotlib = ">=3.4"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"